<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/tt2"
        android:scaleType="centerCrop"
        android:alpha="0.75"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="TABLE TENNIS QUIZ"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:textColor="#ff0000" />

        <TextView
            style="@style/question"
            android:text="@string/q1"
            android:textColor="#000000"
            android:textStyle="bold|italic"
            android:id="@+id/q1"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/rg1">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a1"
                android:checked="true"
                android:textStyle="bold"
                android:textColor="#670340"
                android:textSize="18sp"
                android:id="@+id/a1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b1"
                android:checked="true"
                android:textStyle="bold"
                android:textColor="#670340"
                android:textSize="18sp"
                android:id="@+id/b1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c1"
                android:checked="true"
                android:textStyle="bold"
                android:textColor="#670340"
                android:textSize="18sp"
                android:id="@+id/c1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d1"
                android:checked="true"
                android:textStyle="bold"
                android:textColor="#670340"
                android:textSize="18sp"
                android:id="@+id/d1"/>
        </RadioGroup>

            <TextView
                style="@style/question"
                android:text="@string/q2"
                android:textColor="#000000"
                android:textStyle="bold|italic"
                android:id="@+id/q2"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a2"
                android:textStyle="bold"
                android:textColor="#670340"
                android:textSize="18sp"
                android:id="@+id/a2"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b2"
                android:textStyle="bold"
                android:textColor="#670340"
                android:textSize="18sp"
                android:id="@+id/b2"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c2"
                android:textStyle="bold"
                android:textColor="#670340"
                android:textSize="18sp"
                android:id="@+id/c2"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d2"
                android:textStyle="bold"
                android:textColor="#670340"
                android:textSize="18sp"
                android:id="@+id/d2"/>

            <TextView
                style="@style/question"
                android:text="@string/q3"
                android:textColor="#000000"
                android:textStyle="bold|italic"
                android:id="@+id/q3"/>
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edittext"/>

            <TextView
                style="@style/question"
                android:text="@string/q4"
                android:textColor="#000000"
                android:textStyle="bold|italic"
                android:id="@+id/q4"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/rg4">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a4"
                    android:checked="true"
                    android:textStyle="bold"
                    android:textColor="#670340"
                    android:textSize="18sp"
                    android:id="@+id/a4"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b4"
                    android:checked="true"
                    android:textStyle="bold"
                    android:textColor="#670340"
                    android:textSize="18sp"
                    android:id="@+id/b4"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c4"
                    android:checked="true"
                    android:textStyle="bold"
                    android:textColor="#670340"
                    android:textSize="18sp"
                    android:id="@+id/c4"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d4"
                    android:checked="true"
                    android:textStyle="bold"
                    android:textColor="#670340"
                    android:textSize="18sp"
                    android:id="@+id/d4"/>
            </RadioGroup>

            <TextView
                style="@style/question"
                android:text="@string/q5"
                android:textColor="#000000"
                android:textStyle="bold|italic"
                android:id="@+id/q5"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a5"
                android:textStyle="bold"
                android:textColor="#670340"
                android:textSize="18sp"
                android:id="@+id/a5"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b5"
                android:textStyle="bold"
                android:textColor="#670340"
                android:textSize="18sp"
                android:id="@+id/b5"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c5"
                android:textStyle="bold"
                android:textColor="#670340"
                android:textSize="18sp"
                android:id="@+id/c5"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d5"
                android:textStyle="bold"
                android:textColor="#670340"
                android:textSize="18sp"
                android:id="@+id/d5"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SUBMIT"
                android:layout_marginHorizontal="130dp"
                android:layout_marginVertical="10dp"
                android:onClick="checkQuiz"/>





        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>